# rqt_robomate_ui

./: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
resource/: widget.ui
scripts/: rqt_robomate_ui
src/rqt_robomate_ui/: my_module.py
