<?xml version="1.0"?>
<package format="2">
  <name>rqt_robomate_ui</name>
  <version>0.0.2</version>
  <description>The rqt_robomate_ui package</description>

  <author email="juanfreiszer@frba.utn.edu.ar">Juan Francisco Reiszer</author>
  <author email="nicobortoni@frba.utn.edu.ar">Nicolas Bortoni</author>
  <maintainer email="eborghiorue@frba.utn.edu.ar">Emiliano Borghi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
